Add JVM_OPTS and USER_GROUPS config with hardware/JVM presets in init
Apps on Raspberry Pi and similar devices need the app user in groups
like gpio, i2c, spi, dialout, bluetooth or video, and often JVM flags
such as --enable-native-access=ALL-UNNAMED for Pi4J. init now offers
a preset list for these and stores the merged result as JVM_OPTS and
USER_GROUPS in vmhosting.conf.

Groups are added to the user with usermod -aG (missing groups are
skipped with a warning). JVM_OPTS is exposed in the systemd unit as
Environment="JAVA_OPTS=..." and used via ExecStart=java $JAVA_OPTS,
so it can also be overridden later with Deploy env set JAVA_OPTS=...

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>